# sblex-server

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  Makefile  README.md  cliff.toml  deptracpy.yaml  mypy.ini  pyproject.bak.toml  pyproject.new.toml  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: 01-bug_report.md  02-feature_request.md  03-user-story.md  05-spike.md
.github/PULL_REQUEST_TEMPLATE/: feature_pr_template.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: check.bak.yml  check.yml  ci.yml  release.yml  test.yml
assets/testing/: env  saldo.lex  saldo.txt
contrib/traefik/: routes.toml  traefik.toml
examples/: load_morphology.py  quick_dev.py
src/sblex/: app.py  compound.py  dist.py  fullform_lex.py  glsib.py  glsib_old.py  handler.py  lemma.py  lexeme.py  paradigms.py  saldo_util.py  table.py
src/sblex/application/: __init__.py  predicates.py  texts.py
src/sblex/application/queries/: __init__.py  fullforms.py  inflection.py  lex_fullforms.py  lookup_lid.py  paradigms.py
src/sblex/application/services/: lookup.py
src/sblex/dalin_ws/: config.py  routes.py  server.py
src/sblex/fm/: __init__.py  fm_runner.py  morphology.py
src/sblex/fm_server/: config.py  deps.py  main.py  schemas.py  server.py  tasks.py
src/sblex/fm_server/api/: __init__.py  morph.py
src/sblex/formatting/: __init__.py
src/sblex/infrastructure/queries/: __init__.py  fm_runner_inflection.py  fm_runner_paradigms.py  http_morpology.py  lookup_lex_fullforms.py  mem_lookup_lid.py
src/sblex/main/: __init__.py  bootstrap.py  telemetry.py
src/sblex/saldo_ws/: __init__.py  config.py  deps.py  main.py  ref_resolver.py  schemas.py  server.py  tasks.py  templating.py
src/sblex/saldo_ws/routes/: __init__.py  compounds.py  fullform.py  fullform_lex.py  inflection.py  lids.py  paradigms.py  statics.py  system_info.py
src/sblex/saldo_ws/shared/: version_info.py
src/sblex/sblex_server/: responses.py  server.py  settings.py  templating.py
src/sblex/sblex_server/routes/: fullform_lex.py  statics.py  system_info.py
src/sblex/sblex_server/schemas/: __init__.py  base.py  fullform_lex.py  inflection_row.py  lid_lemma.py  lid_lexeme.py  version.py
src/sblex/sblex_server/shared/: __init__.py
src/sblex/telemetry/: __init__.py  otlp_logging.py  otlp_tracing.py  settings.py  shared.py
src/sblex/trie/: trie.py
src/sblex/webapp/: __init__.py  deps.py  main.py  schemas.py  tasks.py  telemetry.py  templating.py
src/sblex/webapp/routes/: __init__.py  compounds.py  fullform.py  fullform_lex.py  lids.py
src/sblex_server/: __init__.py
static/: saldo.css
templates/: fullform_lex.xml  saldo_compound.html  saldo_compound.xml  saldo_document.html  saldo_fullform.html  saldo_fullform_lex.html  saldo_gen.html  saldo_gen.xml  saldo_lid_graph.html  saldo_lid_lexeme.html  saldo_lid_lexeme.xml  saldo_lid_protojs.js  saldo_paradigms.html  saldo_temp_disable.html
templates/saldo_ws/: compound.html  fullform.html  fullform_lex.html  fullform_lex.xml  gen.html  lid_graph.html  lid_lemma.xml  lid_lemma_saknas.html  lid_lexeme.html  lid_lexeme.xml  lid_lexeme_saknas.html  mata_in_ordform.html  paradigms.html  paradigms.xml  saldo_util.html  table.html  temp_disable.html  temp_disable.xml
tests/adapters/: mem_fm_runner.py
tests/e2e/: conftest.py
tests/e2e/dalin_ws/: conftest.py  test_fullform_lex_api.py
tests/e2e/dalin_ws/__snapshots__/test_api/: test_version.json
tests/e2e/fm/: test_fm_runner.py
tests/e2e/fm_server/: test_fm_morph.py
tests/e2e/saldo_ws/: test_api.py  test_compounds.py  test_fullform_api.py  test_fullform_lex_api.py  test_gen_api.py  test_lid_api.py  test_para_api.py  test_static_files.py
tests/e2e/saldo_ws/__snapshots__/: test_api.ambr  test_compounds.ambr  test_fullform_api.ambr  test_fullform_lex_api.ambr  test_gen_api.ambr  test_lid_api.ambr  test_para_api.ambr
tests/e2e/saldo_ws/__snapshots__/test_compounds/: test_sms_json[dvxe4ljas].json
tests/e2e/saldo_ws/__snapshots__/test_fullform_api/: TestFullformRoutes.test_json_valid_input_returns_200[dv].json  TestFullformRoutes.test_json_valid_input_returns_200[dvxe4].json  TestFullformRoutes.test_json_valid_input_returns_200[dvxe4l].json  TestFullformRoutes.test_json_valid_input_returns_200[dvxe4ljs].json
tests/e2e/saldo_ws/__snapshots__/test_fullform_lex_api/: TestFullformLexRoutes.test_json_missing_segment_returns_404[tt].json  TestFullformLexRoutes.test_json_valid_input_returns_200[dvxe4ljs].json
tests/e2e/test_infrastructure/: test_queries.py
tests/e2e/test_infrastructure/__snapshots__/: test_queries.ambr
tests/e2e/webapp/: test_fullform_api.py  test_fullform_lex_api.py  test_gen_api.py  test_lid_api.py
tests/unit/: test_application_predicates.py  test_lexeme_formatting.py  test_matomo_settings.py  test_schemas.py  test_trie.py
tests/unit/__snapshots__/: test_matomo_settings.ambr
tests/unit/test_queries/: test_http_morphology.py
(+8 files in other folders)
