[project]
name = "sblex-server"
version = "0.2.3"
description = "SBLEX server working with FM data."
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
dependencies = [
    "fastapi>=0.104.1",
    "jinja2>=3.1.2",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "json-streams>=0.13.0",
    "python-json-logger>=2.0.7",
    "asgi-matomo>=0.4.1",
    "environs>=9.5.0",
    "brotli-asgi>=1.4.0",
    "uvicorn>=0.24.0.post1",
    "gunicorn>=21.2.0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "httpx>=0.25.1",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"

[project.optional-dependencies]
ci = ["ruff>=0.1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/sblex"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.10.1",
    "mypy>=1.6.1",
    "pytest-asyncio>=0.21.1",
    "asgi-lifespan>=2.1.0",
    "python-dotenv>=1.0.0",
    "watchfiles>=0.21.0",
    "bump2version>=1.0.1",
    "deptracpy @ git+https://github.com/patrickkusebauch/deptracpy",
]

[tool.hatch.metadata]
allow-direct-references = true
