[project]
name = "sblex-server"
version = "0.3.1-dev1"
description = "Saldo-WS-server && Dalin-WS-server"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
dependencies = [
    "fastapi>=0.110.0",
    "jinja2>=3.1.2",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-logging>=0.44b0",
    "python-json-logger>=2.0.7",
    "asgi-matomo>=0.5.0",
    "environs>=11.0.0",
    "brotli-asgi>=1.4.0",
    "uvicorn>=0.24.0.post1",
    "gunicorn>=21.2.0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "httpx>=0.27.0",
    "typing-extensions>=4.8.0",
    "pydantic>=2.6.3",
    "json-arrays>=0.14.0",
    "opentelemetry-exporter-otlp>=1.23.0",
    "pydantic-settings>=2.2.1",
    "orjson>=3.9.15",
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/sblex"]

[tool.deptry]
known_first_party = ["sblex"]
extend_exclude = [
    "src/sblex/app.py",
    "src/sblex/compound.py",
    "src/sblex/dist.py",
    "src/sblex/fullform_lex.py",
    "src/sblex/fullform.py",
    "src/sblex/glsib_old.py",
    "src/sblex/glsib.py",
    "src/sblex/handler.py",
    "src/sblex/lem.py",
    "src/sblex/lemma.py",
    "src/sblex/lexeme.py",
    "src/sblex/lsib.py",
    "src/sblex/md1.py",
    "src/sblex/paradigms.py",
    "src/sblex/plist.py",
    "src/sblex/pos.py",
    "src/sblex/pos.py",
    "src/sblex/saldo_util.py",
    "src/sblex/sib.py",
    "src/sblex/table.py",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["python-json-logger", "uvicorn", "gunicorn", "ruff"]

# [tool.pdm]
# distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "asgi-lifespan>=2.1.0",
    "python-dotenv>=1.0.1",
    "watchfiles>=0.21.0",
    "deptry>=0.12.0",
    "deptracpy @ git+https://github.com/patrickkusebauch/deptracpy",
    "syrupy>=4.6.1",
    "bump-my-version>=0.19.3",
]
