[project]
name = "sblex-server"
version = "0.4.0"
description = "Saldo-WS-server && Dalin-WS-server"
readme = "README.md"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
requires-python = ">=3.10"
dependencies = [
    "asgi-matomo>=0.6.0",
    "brotli-asgi>=1.4.0",
    "fastapi>=0.115.2",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "json-arrays>=0.15.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-sdk>=1.27.0",
    "orjson>=3.10.7",
    "pydantic-settings>=2.5.2",
]
license = { text = "MIT" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/sblex"]

[tool.uv]
dev-dependencies = [
    "asgi-lifespan>=2.1.0",
    "mypy>=1.12.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "syrupy>=4.7.2",
    "uvicorn>=0.32.0",
    "watchfiles>=0.24.0",
]
